--- a/Gomenyuk_lab01/MainWindow.xaml
+++ b/Gomenyuk_lab01/MainWindow.xaml
@@ -3,23 +3,24 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-         xmlns:views="clr-namespace:KMA.CSharp2024.Gomenyuk_lab01.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="900">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="50" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="50" />
         </Grid.RowDefinitions>
+
         <TextBlock Grid.Row="0">Enter your birthday</TextBlock>
-        <DatePicker Name="BDpicker" Grid.Row="0" HorizontalAlignment="Left" Margin="400,0,0,108" Grid.RowSpan="2" Width="400"></DatePicker>
+        <DatePicker Name="BDpicker" Grid.Row="0" HorizontalAlignment="Center"  Width="300"></DatePicker>
 
         <TextBlock Name="AgeView" Grid.Row="1">Your age is</TextBlock>
-        <Button Name="BDsetter" Grid.Row="1" 
-                Content="Set Birthday" HorizontalAlignment="Left" Click="BDsetter_Click" Margin="400,0,0,0" Width="400"></Button>
-        <TextBlock Name="BDlabel" Grid.Row="2" HorizontalAlignment="Center" 
-           VerticalAlignment="Center" Text="Saved birthday:"></TextBlock>
+
+        <Button Name="BDsetter" Grid.Row="0" 
+                Content="Save" HorizontalAlignment="Right" Click="BDsetter_Click"  Width="300"></Button>
+
+        <TextBlock Name="BDlabel" Grid.Row="2" HorizontalAlignment="Left" 
+           Text="Personal information"></TextBlock>
     </Grid>
 </Window>
